Fix scrolling bug on iOS Just don’t use 100vh for full height elements…

--- a/src/modules/common/_common.scss
+++ b/src/modules/common/_common.scss
@@ -3,9 +3,14 @@ body {
   margin: 0;
   font-family: 'Lato', sans-serif;
   font-weight: 400;
+  overflow: hidden;
 }
 
 html, body {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
+}
+
+#root {
+  height: 100%;
 }
