--- a/src/modules/home/components/_home.scss
+++ b/src/modules/home/components/_home.scss
@@ -1,3 +1,4 @@
 .home {
-
+  height: 100%;
+  width: 100%;
 }
