--- a/src/modules/unit/components/_map-view.scss
+++ b/src/modules/unit/components/_map-view.scss
@@ -1,6 +1,8 @@
 .map-view {
+  height: 100%;
+  width: 100%;
   .leaflet-container {
-    height: 100vh;
+    height: 100%;
 
     .leaflet-control-container {
 
